/* Copyright (C) 2025 Interactive Brokers LLC. All rights reserved. This code is subject to the terms
 * and conditions of the IB API Non-Commercial License or the IB API Commercial License, as applicable. */

syntax = "proto3";

package protobuf;

import "HistoricalTickLast.proto";
import "HistoricalTickBidAsk.proto";
import "HistoricalTick.proto";

option java_outer_classname = "TickByTickDataProto";
option java_package = "com.ib.client.protobuf";
option csharp_namespace = "IBApi.protobuf";

message TickByTickData {
    optional int32 reqId = 1;
    optional int32 tickType = 2;
	oneof tick {
		HistoricalTickLast historicalTickLast = 3;
		HistoricalTickBidAsk historicalTickBidAsk = 4;
		HistoricalTick historicalTickMidPoint = 5;
	}
}
